# ai-level-gen

./: CMakeLists.txt  mod.json
.github/workflows/: build.yml
src/: GeneratorConfig.hpp  IDs.hpp  main.cpp
src/ai/: GroqClient.hpp
src/generator/: DifficultyEngine.hpp  LevelBuilder.cpp  LevelBuilder.hpp  Pattern.hpp  PatternLibrary.cpp  PatternLibrary.hpp
src/ui/: MainPopup.cpp  MainPopup.hpp
